# NGPCraft-Ngpc-sound-creator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DOC.md  LICENSE  README.md  THIRD_PARTY.md
app/: CMakeLists.txt
app/src/: MainWindow.cpp  MainWindow.h  main.cpp
app/src/audio/: AudioOutput.cpp  AudioOutput.h  EngineHub.cpp  EngineHub.h  InstrumentPlayer.cpp  InstrumentPlayer.h  MidiImporter.cpp  MidiImporter.h  PsgHelpers.cpp  PsgHelpers.h  TrackerPlaybackEngine.cpp  TrackerPlaybackEngine.h  WavExporter.cpp  WavExporter.h
app/src/i18n/: AppLanguage.cpp  AppLanguage.h
app/src/models/: InstrumentStore.cpp  InstrumentStore.h  ProjectDocument.cpp  ProjectDocument.h  SongDocument.cpp  SongDocument.h  TrackerDocument.cpp  TrackerDocument.h
app/src/tabs/: DebugTab.cpp  DebugTab.h  HelpTab.cpp  HelpTab.h  InstrumentTab.cpp  InstrumentTab.h  PlayerTab.cpp  PlayerTab.h  ProjectTab.cpp  ProjectTab.h  SfxLabTab.cpp  SfxLabTab.h  TrackerTab.cpp  TrackerTab.cpp.pre_recover_backup  TrackerTab.h
app/src/widgets/: AttnInputDialog.cpp  AttnInputDialog.h  EnvelopeCurveWidget.cpp  EnvelopeCurveWidget.h  FxInputDialog.cpp  FxInputDialog.h  InstrumentInputDialog.cpp  InstrumentInputDialog.h  NoteInputDialog.cpp  NoteInputDialog.h  ProjectStartDialog.cpp  ProjectStartDialog.h  TrackerGridWidget.cpp  TrackerGridWidget.h
core/: CMakeLists.txt
core/include/ngpc/: core.h  file.h  instrument.h  k1_stream.h  midi.h  polling_driver.h  project.h  psg.h  sound_engine.h  z80_machine.h
core/src/: core.cpp  file.cpp  instrument.cpp  k1_stream.cpp  midi.cpp  polling_driver.cpp  project.cpp  psg.cpp  sound_engine.cpp  z80_machine.cpp
driver_custom_latest/: INTEGRATION_QUICKSTART.md  LICENCE.md  README.md  sounds.c  sounds.h
packaging/windows/: ngpc_sound_creator.iss
scripts/: package_windows.ps1
tools/psg_calibration/: README.md  analyse_capture.py
